--- a/src/api/appsettings.json
+++ b/src/api/appsettings.json
@@ -1,5 +1,8 @@
 {
     "testsettings" : {
         "testResponse" : "Hello World"
+    },
+    "hosting" : {
+        "url" : "localhost:5000"
     }
 }
