--- a/src/api/appsettings.json
+++ b/src/api/appsettings.json
@@ -3,6 +3,6 @@
         "testResponse" : "Hello World"
     },
     "hosting" : {
-        "url" : "localhost:5000"
+        "url" : "http://*:5000"
     }
 }
