--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -1,17 +1,5 @@
-FROM microsoft/aspnetcore-build:2.0 AS build-env
-WORKDIR /app
-
-# Copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore
-
-# Copy everything else and build
-COPY . ./
-RUN dotnet publish -c Release -o out
-
-# Build runtime image
-FROM microsoft/aspnetcore:2.0
-WORKDIR /app
-COPY --from=build-env /app/out .
-EXPOSE 5000
-ENTRYPOINT ["dotnet", "api.dll"]
+FROM microsoft/dotnet:2.0.0-runtime
+WORKDIR /dotnetapp
+COPY ./bin/Docker .
+ENV ASPNETCORE_ENVIRONMENT docker
+ENTRYPOINT dotnet api.dll
